--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 header {
-    padding: 60px;
+    padding: 20px;
     text-align: center;
     background: #1abc9c;
     color: white;
@@ -13,10 +13,11 @@ header {
 body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
+    background: #ffffff;
 }
 
 section {
-    padding: 60px;
+    padding: 10px;
     text-align: center;
     background: #54ecce;
     color: white;
@@ -78,4 +79,15 @@ footer {
     font-size: 14px;
     text-align: center;
     padding: 3px;
+}
+
+img {
+    max-width: 100%;
+}
+
+@media all and (min-width:960px) {
+    body {
+        width: 960px;
+        margin: auto;
+    }
 }
