--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -82,12 +82,39 @@ footer {
 }
 
 img {
-    max-width: 100%;
+    height: auto;
+    width: 70%;
 }
 
-@media all and (min-width:767px) {
+@media (min-width:767px) {
     body {
         width: 960px;
-        margin: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: auto;
+    }
+    section {
+        padding: 10px;
+        text-align: center;
+        background: #54ecce;
+        color: white;
+        font-size: 30px;
+    }
+}
+
+@media (max-width:767px) {
+    body {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: auto;
+    }
+    section {
+        padding: 10px;
+        text-align: center;
+        background: rgb(162, 214, 214);
+        color: white;
+        font-size: 30px;
     }
 }
